# sticky-mouse-trap

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  org.kde.yakuake.desktop  stick-cursor-to-screen
dependencies/: CMakeLists.txt
src/: main.cpp
