Include(FetchContent)

set(FETCHCONTENT_UPDATES_DISCONNECTED true)

set(FETCHCONTENT_QUIET off)

FetchContent_Declare(
	MUtilize
	GIT_REPOSITORY https://github.com/LMauricius/MUtilize.git
	GIT_TAG b88d8354a10be14f963a6c775f62548f7ea17a3c
	GIT_PROGRESS TRUE
	SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/MUtilize
	CMAKE_ARGS
	-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
	-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
	-DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
	-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
)
FetchContent_MakeAvailable(MUtilize)
